<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuRechercher"
        android:title="@string/txtMenuRechercher" />
    <item
        android:id="@+id/menuParticipation"
        android:title="@string/txtMenuParticipation" />
    <item
        android:id="@+id/menuPresentation"
        android:title="@string/txtMenuPresentation" >
        <menu >
            <item
                android:id="@+id/menuContact"
                android:title="@string/txtContact" />
            <item
                android:id="@+id/menuEquipe"
                android:title="@string/txtEquipe" />
            <item
                android:id="@+id/menuCroissance"
                android:title="@string/txtCroissance" />
        </menu>
    </item>
</menu>