<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <Button
        android:id="@+id/btnAnnulerReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="112dp"
        android:text="Annuler"
        android:textSize="20dp"
        app:backgroundTint="@color/rouge"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservation"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConfirmerReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="112dp"
        android:text="@string/btnConfirmerReservation"
        android:textSize="20sp"
        app:backgroundTint="@color/vert"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservation"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="130dp"
        android:text="@string/txtReservation"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtQuestionReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtQuestionReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp"
        android:text="@string/txtQuestionReservation"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnnulerReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRetourReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnRetour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>