<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdherent"
        android:layout_width="231dp"
        android:layout_height="98dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnAdherent"
        android:textColor="@color/vert"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnEntraineur"
        android:layout_width="235dp"
        android:layout_height="89dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnEntraineur"
        android:textColor="@color/rouge"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdherent" />

    <Button
        android:id="@+id/btnMembre"
        android:layout_width="235dp"
        android:layout_height="85dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnMembre"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntraineur" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choisissez une catégorie"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

</androidx.constraintlayout.widget.ConstraintLayout>